[package]
name = "buckshot"
version = "4.0.6"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "A fast and capable Minecraft name sniper"

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
chrono = "0.4"
dialoguer = "0.9"
lazy_static = "1.4"
native-tls = "0.2"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking", "cookies", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.15", features = ["full"] }
tokio-native-tls = "0.3"
toml = "0.5"

[profile.release]
lto = "fat"
codegen-units = 1
