[package]
name = "buckshot"
version = "4.0.10"
authors = ["tropicbliss <tropicbliss@protonmail.com>"]
edition = "2021"
license = "MIT"
description = "A fast and capable Minecraft name sniper"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.53"
chrono = "0.4.19"
dialoguer = "0.9.0"
lazy_static = "1.4.0"
native-tls = "0.2.8"
regex = "1.5.4"
reqwest = { version = "0.11.9", features = ["blocking", "cookies", "json", "multipart"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
structopt = "0.3.26"
tokio = { version = "1.16.1", features = ["full"] }
tokio-native-tls = "0.3.0"
toml = "0.5.8"

[profile.release]
lto = "fat"
codegen-units = 1
